// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`focuses correctly and submits on enter in last input 1`] = `
<div>
  <input
    value="first"
  />
  <input
    value="second"
  />
</div>
`;

exports[`renders the render prop 1`] = `
<div>
  <div>
    hello
  </div>
</div>
`;

exports[`submits on button click 1`] = `
<div>
  <input
    value="first"
  />
  <input
    value="second"
  />
  <button>
    Send
  </button>
</div>
`;
